new color position + typo and margin done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Metrophobic&family=Red+Hat+Mono:wght@300;400;500;600;700&family=Red+Hat+Text:wght@300;400;500;600;700&family=Zen+Dots&display=swap" rel="stylesheet">
-    <title>LinkTree Clone Demo</title>
+    <title>MetaNode-Labs Linktree</title>
   </head>
   <body>
     <div id="root"></div>
